src/NovelRT.DotNet/Interop/Maths/NovelRT.cs

// Copyright © Matt Jones and Contributors. Licensed under the MIT Licence (MIT). See LICENCE.md in the repository root for more information.

using System;
using System.Runtime.InteropServices;

namespace NovelRT.Interop
{
    public static unsafe partial class NovelRT
    {
        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoBounds Nrt_GeoBounds_zero();

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoBounds Nrt_GeoBounds_GetAABBFromTransform(NrtTransform transform);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoBounds Nrt_GeoBounds_FromTransform(NrtTransform transform);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector2F Nrt_GeoBounds_getCornerInLocalSpace(NrtGeoBounds bounds, [NativeTypeName("int32_t")] int index);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector2F Nrt_GeoBounds_getCornerInWorldSpace(NrtGeoBounds bounds, [NativeTypeName("int32_t")] int index);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoBounds_pointIsWithinBounds(NrtGeoBounds bounds, NrtGeoVector2F point);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector2F Nrt_GeoBounds_getExtents(NrtGeoBounds bounds);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtResult Nrt_GeoBounds_intersectsWith(NrtGeoBounds first, NrtGeoBounds other, NrtBool* outputResult);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoBounds_equal(NrtGeoBounds lhs, NrtGeoBounds rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoBounds_notEqual(NrtGeoBounds lhs, NrtGeoBounds rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoVector2F_isNaN(NrtGeoVector2F vector);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector2F Nrt_GeoVector2F_uniform(float value);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector2F Nrt_GeoVector2F_zero();

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector2F Nrt_GeoVector2F_one();

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector2F_rotateToAngleAroundPoint(NrtGeoVector2F* vector, float angleRotationValue, NrtGeoVector2F point);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoVector2F_epsilonEquals(NrtGeoVector2F vector, NrtGeoVector2F other, NrtGeoVector2F epsilonValue);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector2F Nrt_GeoVector2F_getNormalised(NrtGeoVector2F vector);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern float Nrt_GeoVector2F_getLength(NrtGeoVector2F vector);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern float Nrt_GeoVector2F_getMagnitude(NrtGeoVector2F vector);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoVector2F_equal(NrtGeoVector2F lhs, NrtGeoVector2F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoVector2F_notEqual(NrtGeoVector2F lhs, NrtGeoVector2F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoVector2F_lessThan(NrtGeoVector2F lhs, NrtGeoVector2F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoVector2F_lessThanOrEqualTo(NrtGeoVector2F lhs, NrtGeoVector2F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoVector2F_greaterThan(NrtGeoVector2F lhs, NrtGeoVector2F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoVector2F_greaterThanOrEqualTo(NrtGeoVector2F lhs, NrtGeoVector2F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector2F Nrt_GeoVector2F_addVector(NrtGeoVector2F lhs, NrtGeoVector2F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector2F Nrt_GeoVector2F_subtractVector(NrtGeoVector2F lhs, NrtGeoVector2F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector2F Nrt_GeoVector2F_multiplyVector(NrtGeoVector2F lhs, NrtGeoVector2F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector2F Nrt_GeoVector2F_divideVector(NrtGeoVector2F lhs, NrtGeoVector2F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector2F Nrt_GeoVector2F_addFloat(NrtGeoVector2F lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector2F Nrt_GeoVector2F_subtractFloat(NrtGeoVector2F lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector2F Nrt_GeoVector2F_multiplyFloat(NrtGeoVector2F lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector2F Nrt_GeoVector2F_divideFloat(NrtGeoVector2F lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector2F_addAssignVector(NrtGeoVector2F* lhs, NrtGeoVector2F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector2F_subtractAssignVector(NrtGeoVector2F* lhs, NrtGeoVector2F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector2F_multiplyAssignVector(NrtGeoVector2F* lhs, NrtGeoVector2F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector2F_divideAssignVector(NrtGeoVector2F* lhs, NrtGeoVector2F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector2F_addAssignFloat(NrtGeoVector2F* lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector2F_subtractAssignFloat(NrtGeoVector2F* lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector2F_multiplyAssignFloat(NrtGeoVector2F* lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector2F_divideAssignFloat(NrtGeoVector2F* lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector3F Nrt_GeoVector3F_createFromGeoVector2F(NrtGeoVector2F vector);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoVector3F_isNaN(NrtGeoVector3F vector);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector3F Nrt_GeoVector3F_uniform(float value);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector3F Nrt_GeoVector3F_zero();

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector3F Nrt_GeoVector3F_one();

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector3F_rotateToAngleAroundPoint(NrtGeoVector3F* vector, float angleRotationValue, NrtGeoVector3F point);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoVector3F_epsilonEquals(NrtGeoVector3F vector, NrtGeoVector3F other, NrtGeoVector3F epsilonValue);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector3F Nrt_GeoVector3F_getNormalised(NrtGeoVector3F vector);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern float Nrt_GeoVector3F_getLength(NrtGeoVector3F vector);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern float Nrt_GeoVector3F_getMagnitude(NrtGeoVector3F vector);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoVector3F_equal(NrtGeoVector3F lhs, NrtGeoVector3F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoVector3F_notEqual(NrtGeoVector3F lhs, NrtGeoVector3F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoVector3F_lessThan(NrtGeoVector3F lhs, NrtGeoVector3F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoVector3F_lessThanOrEqualTo(NrtGeoVector3F lhs, NrtGeoVector3F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoVector3F_greaterThan(NrtGeoVector3F lhs, NrtGeoVector3F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtBool Nrt_GeoVector3F_greaterThanOrEqualTo(NrtGeoVector3F lhs, NrtGeoVector3F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector3F Nrt_GeoVector3F_addVector(NrtGeoVector3F lhs, NrtGeoVector3F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector3F Nrt_GeoVector3F_subtractVector(NrtGeoVector3F lhs, NrtGeoVector3F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector3F Nrt_GeoVector3F_multiplyVector(NrtGeoVector3F lhs, NrtGeoVector3F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector3F Nrt_GeoVector3F_divideVector(NrtGeoVector3F lhs, NrtGeoVector3F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector3F Nrt_GeoVector3F_addFloat(NrtGeoVector3F lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector3F Nrt_GeoVector3F_subtractFloat(NrtGeoVector3F lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector3F Nrt_GeoVector3F_multiplyFloat(NrtGeoVector3F lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern NrtGeoVector3F Nrt_GeoVector3F_divideFloat(NrtGeoVector3F lhs, float rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector3F_addAssignVector(NrtGeoVector3F* lhs, NrtGeoVector3F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector3F_subtractAssignVector(NrtGeoVector3F* lhs, NrtGeoVector3F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector3F_multiplyAssignVector(NrtGeoVector3F* lhs, NrtGeoVector3F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector3F_divideAssignVector(NrtGeoVector3F* lhs, NrtGeoVector3F rhs);

        [DllImport("NovelRT.Interop", ExactSpelling = true)]
        public static extern void Nrt_GeoVector3F_addAssignFloat(NrtGeoVector3F* lhs, float rhs);
